--- a/index.html
+++ b/index.html
@@ -9,6 +9,25 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+  <div class="container">
+    <div class="col-md-4 offset-md-4">
+      <form id="frm1" action="js/main.js">
+        <div class="form-group">
+          <label for="InputTitle">Title</label>
+          <input type="text" class="form-control" id="InputTitle" placeholder="Enter Title of Book">
+        </div>
+        <div class="form-group">
+          <label for="InputAuthor">Author</label>
+          <input type="text" class="form-control" id="InputAuthor" placeholder="Enter Author of Book">
+        </div>
+        <div class="form-group">
+          <label for="InputPages">Number of Pages</label>
+          <input type="text" class="form-control" id="InputPages" placeholder="Number of Pages">
+        </div>
+        <button type="submit" class="btn btn-primary">Add New Book</button>
+      </form>
+    </div>
+  </div>
   <script src="js/jquery-3.4.1.slim.min.js"></script>
   <script src="/js/bootstrap.bundle.min.js"></script>
 </body>
