added delete button

--- a/index.html
+++ b/index.html
@@ -20,13 +20,14 @@
               <th>Author</th>
               <th>Pages</th>
               <th>Status</th>
+              <th>Action</th>
             </tr>
           </thead>
           <tbody id="book-list"></tbody>
         </table>
       </div>
       <div class="">
-        <input type = "button" onclick = "Show();" name = "ok" value = "Add New Book" />
+        <input type = "button" onclick = "Show();" class="btn btn-secondary" value = "Add New Book" />
       </div>
       <div class="col-md-4 offset-md-4 table-form">
         <form id="bookform">
