--- a/index.html
+++ b/index.html
@@ -33,15 +33,15 @@
         <form id="bookform">
           <div class="form-group">
             <label for="InputTitle">Title</label>
-            <input type="text" class="form-control" id="inputTitle" placeholder="Enter Title of Book">
+            <input type="text" class="form-control" id="inputTitle" placeholder="Enter Title of Book" required>
           </div>
           <div class="form-group">
             <label for="InputAuthor">Author</label>
-            <input type="text" class="form-control" id="inputAuthor" placeholder="Enter Author of Book">
+            <input type="text" class="form-control" id="inputAuthor" placeholder="Enter Author of Book" required>
           </div>
           <div class="form-group">
             <label for="InputPages">Number of Pages</label>
-            <input type="text" class="form-control" id="inputPages" placeholder="Number of Pages">
+            <input type="number" class="form-control" id="inputPages" placeholder="Number of Pages" required>
           </div>
           <div class="form-check">
             <input type="checkbox" class="form-check-input" id="inputStatus">
